<resources>
    <string name="app_name">JAV1001-ScoreKeeper</string>
    <string name="basketball_score_keeper">Basketball Match Score Keeper</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="teams_default_score">0</string>
    <string name="select_score">Select Score</string>
    <string name="score_one">1</string>
    <string name="score_two">2</string>
    <string name="score_three">3</string>
    <string name="night_mode">Night Mode</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="show_scores">Show Scores</string>
    <string name="save_current_scores">Save current Scores</string>
    <string name="team_a_score">Team A Score: </string>
    <string name="team_b_score">Team B Score: </string>
</resources>