<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SettingsActivity">


    <Switch
        android:id="@+id/saveScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_current_scores"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Switch
        android:id="@+id/showScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_scores"
        android:visibility="invisible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <LinearLayout
        android:id="@+id/teamALinearLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a_score"/>
        <TextView
            android:id="@+id/teamASavedScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/teamBLinearLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b_score"/>
        <TextView
            android:id="@+id/teamBSavedScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



</LinearLayout>