<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basketball_score_keeper"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamA"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/teamAScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teams_default_score"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/teamAIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#ffff"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/ic_action_name"/>
                <ImageButton
                    android:id="@+id/teamADecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#ffff"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/ic_remove"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamB"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/teamBScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teams_default_score"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/teamBIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#ffff"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/holo_red_dark"
                    android:src="@drawable/ic_action_name"/>
                <ImageButton
                    android:id="@+id/teamBDecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#ffff"
                    android:background="@android:color/holo_red_dark"
                    android:src="@drawable/ic_remove"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_score"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_one"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_two"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_three"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>





</LinearLayout>